--- a/free_write.html
+++ b/free_write.html
@@ -10,6 +10,7 @@
 <body>
 
     <div class="container mt-3">
+      <div class="w-50 mx-auto">
         <h2>게시글 작성</h2>
         <form method="">
             <div class="mb-3">
@@ -26,6 +27,7 @@
                 <button type="button" class="btn btn-secondary">취소</button>
             </div>
         </form>
+      </div>
     </div>
 
 </body>
