--- a/free_board.html
+++ b/free_board.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class="container mt-3">
+  <div class="w-75 mx-auto">
     <h2>자유게시판</h2>
 
     <table class="table table-hover">
@@ -55,6 +56,7 @@
       <button type="button" class="btn btn-secondary">글쓰기</button>
     </div>
   </div>
+</div>
 
 </body>
 </html>
