--- a/free_write.html
+++ b/free_write.html
@@ -12,17 +12,17 @@
     <div class="container mt-3">
       <div class="w-50 mx-auto">
         <h2>게시글 작성</h2>
-        <form method="">
-            <div class="mb-3">
+        <form method="" class="mt-4">
+            <div class="mb-4">
                 <input type="text" class="form-control" id="free_title" placeholder="제목을 입력하세요" name="free_title" required autofocus>
             </div>
-            <div class="mb-3">
+            <div class="mb-4">
                 <textarea class="form-control" rows="5" id="free_content" placeholder="내용을 입력하세요" name="free_content" required></textarea>
             </div>
-            <div class="mb-3">
+            <div class="mb-4">
                 <input type="file" class="form-control" id="free_img" name="free_img">
             </div>
-            <div class="mb-3 d-flex justify-content-between">
+            <div class="mb-4 d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary">작성완료</button>
                 <button type="button" class="btn btn-secondary">취소</button>
             </div>
