--- a/review_board.html
+++ b/review_board.html
@@ -10,46 +10,48 @@
 <body>
 
 <div class="container mt-3">
-  <h2>리뷰게시판</h2>
-          
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th class="text-center">번호</th>
-        <th class="text-center">제목</th>
-        <th class="text-center">글쓴이</th>
-        <th class="text-center">작성일</th>
-        <th class="text-center">조회수</th>
-        <th class="text-center">추천수</th>
-      </tr>
-    </thead>
-    <tbody>
+  <div class="w-75 mx-auto">
+    <h2>리뷰게시판</h2>
+            
+    <table class="table table-hover mt-4">
+      <thead>
         <tr>
-            <td class="text-center">252</td>
-            <td>문수골 힐링 캠핑장</td>
-            <td class="text-center">Reo_boo92</td>
-            <td class="text-center">2023-07-25</td>
-            <td class="text-center">1853</td>
-            <td class="text-center">7</td>
+          <th class="text-center">번호</th>
+          <th class="text-center">제목</th>
+          <th class="text-center">글쓴이</th>
+          <th class="text-center">작성일</th>
+          <th class="text-center">조회수</th>
+          <th class="text-center">추천수</th>
         </tr>
-        <tr>
-            <td class="text-center">251</td>
-            <td>충북 진천 초평밤나무캠핑장</td>
-            <td class="text-center">일각수</td>
-            <td class="text-center">2023-06-02</td>
-            <td class="text-center">1871</td>
-            <td class="text-center">13</td>
-        </tr>
-        <tr>
-            <td class="text-center">250</td>
-            <td>성주 금수문화캠핑장 너무 좋아요~</td>
-            <td class="text-center">윤이c</td>
-            <td class="text-center">2023-05-18</td>
-            <td class="text-center">834</td>
-            <td class="text-center">3</td>
-        </tr>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+          <tr>
+              <td class="text-center">252</td>
+              <td>문수골 힐링 캠핑장</td>
+              <td class="text-center">Reo_boo92</td>
+              <td class="text-center">2023-07-25</td>
+              <td class="text-center">1853</td>
+              <td class="text-center">7</td>
+          </tr>
+          <tr>
+              <td class="text-center">251</td>
+              <td>충북 진천 초평밤나무캠핑장</td>
+              <td class="text-center">일각수</td>
+              <td class="text-center">2023-06-02</td>
+              <td class="text-center">1871</td>
+              <td class="text-center">13</td>
+          </tr>
+          <tr>
+              <td class="text-center">250</td>
+              <td>성주 금수문화캠핑장 너무 좋아요~</td>
+              <td class="text-center">윤이c</td>
+              <td class="text-center">2023-05-18</td>
+              <td class="text-center">834</td>
+              <td class="text-center">3</td>
+          </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 </body>
