--- a/review_board.html
+++ b/review_board.html
@@ -51,6 +51,11 @@
           </tr>
       </tbody>
     </table>
+    <div class="mt-4 d-flex justify-content-end">
+        <button type="button" class="btn btn-outline-secondary me-3">목록</button>
+        <button type="button" class="btn btn-outline-secondary me-3">이전글</button>
+        <button type="button" class="btn btn-outline-secondary">다음글</button>
+      </div>
   </div>
 </div>
 
