--- a/review_board.html
+++ b/review_board.html
@@ -51,11 +51,10 @@
           </tr>
       </tbody>
     </table>
-    <div class="mt-4 d-flex justify-content-end">
-        <button type="button" class="btn btn-outline-secondary me-3">목록</button>
-        <button type="button" class="btn btn-outline-secondary me-3">이전글</button>
-        <button type="button" class="btn btn-outline-secondary">다음글</button>
-      </div>
+    <div class="d-flex justify-content-between">
+      <input type="search" id="free_board_search" placeholder="검색">
+      <button type="button" class="btn btn-secondary">글쓰기</button>
+    </div>
   </div>
 </div>
 
